[package]
name = "yubi-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecdsa = { version = "0.15.1", features = ["der"] }
oorandom = "11.1.3"
rpassword = "7.2.0"
pcsc = "2.8.0"
p384 = { version = "0.12.0", features = ["ecdsa", "pem"] }
signature = "2.0.0"
sha2 = "0.10.6"